processed/gerrit/txt_full/59601.txt
Change:     59601
Subject:    LU-12345 mdt: add server-side IT_WRITE_LEASE support
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/59601
Change-Id:  Ibbae7504e2d0d4280e30991b12c507c1486f1b55
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Patrick Farrell
Created:    2025-06-05 19:57:12.000000000
Updated:    2025-06-15 02:21:53.000000000
Patch Set:  1
Insertions: +64
Deletions:  -0
Comments:   4 (0 unresolved)

--- Commit Message ---
LU-12345 mdt: add server-side IT_WRITE_LEASE support

This patch implements server-side support for write lease
intents in the MDT layer. The server now properly handles
IT_WRITE_LEASE intents from clients and grants appropriate
write lease locks.

The implementation adds:
- IT_WRITE_LEASE case in mdt_intent_opc() routing
- mdt_intent_write_lease() handler function
- Proper lock acquisition with MDS_INODELOCK_WRITE_LEASE
- Request format and disposition handling

When a client sends an IT_WRITE_LEASE intent, the server
now grants an exclusive write lease lock using the
MDS_INODELOCK_WRITE_LEASE lock bit, providing coordination
between multiple clients for write operations.

This completes the write lease implementation started in
the previous client-side patch, enabling full write lease
functionality in Lustre.

Signed-off-by: Patrick Farrell <pfarrell@whamcloud.com>
Change-Id: Ibbae7504e2d0d4280e30991b12c507c1486f1b55

--- Review History ---

--- Message (Patrick Farrell, 2025-06-05 19:57:12.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2025-06-05 19:58:21.000000000) ---
Patch Set 1:

(1 comment)

1 style warning(s).
For more details please see https://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Lustre Gerrit Janitor, 2025-06-05 20:05:29.000000000) ---
Patch Set 1:

(3 comments)

centos7: Compile failed

rocky8.10: Compile failed


 Job output URL: https://testing.whamcloud.com/gerrit-janitor/52257/results.html

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-06-05 20:20:43.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/mdt/mdt_handler.o] Error 1
make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/mdc/mdc_locks.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/mdt] Error 2
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/mdc] Error 2
make[4]: *** [scripts/Makefile.build:249: /home/green/git/lustre-release/lustre/llite/file.o] Error 1
make[3]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre/llite] Error 2
make[2]: *** [scripts/Makefile.build:478: /home/green/git/lustre-release/lustre] Error 2
make[1]: *** [Makefile:1944: /home/green/git/lustre-release] Error 2
make: *** [autoMakefile:1232: modules] Error 2
 /home/green/git/lustre-release/lustre/mdt/mdt_handler.c: In function ‘mdt_intent_write_lease’:
 /home/green/git/lustre-release/lustre/mdt/mdt_handler.c:5017:47: error: ‘MDS_INODELOCK_WRITE_LEASE’ undeclared (first use in this function); did you mean ‘MDS_INODELOCK_UPDATE’?
  5017 |         rc = mdt_getattr_name_lock(info, lhc, MDS_INODELOCK_WRITE_LEASE, ldlm_rep);
       |                                               ^~~~~~~~~~~~~~~~~~~~~~~~~
       |                                               MDS_INODELOCK_UPDATE
 /home/green/git/lustre-release/lustre/mdt/mdt_handler.c:5017:47: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lustre/mdt/mdt_handler.c: In function ‘mdt_intent_opc’:
 /home/green/git/lustre-release/lustre/mdt/mdt_handler.c:5437:14: error: ‘IT_WRITE_LEASE’ undeclared (first use in this function)
  5437 |         case IT_WRITE_LEASE:
       |              ^~~~~~~~~~~~~~

--- Message (jenkins, 2025-06-05 20:36:55.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/113986/ : FAILURE

--- Message (Patrick Farrell, 2025-06-15 02:21:53.000000000) ---
Abandoned

Replaced
